# game-of-life-hs

./: LICENSE  README.md  TODO.md  game-of-life-hs.cabal
src/: Grid.hs  Main.hs
