name:                game-of-life-hs
version:             0.1.0.0
synopsis:            Yet another implementation of Conway's Game of Life
description:         See README.md
homepage:            https://github.com/SilverSylvester/game-of-life-hs#readme
license:             MIT
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2016 Conor Reynolds
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable gol
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
                     , ansi-terminal
                     , optparse-applicative
